// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useLocationFilter > should get empty shifts for time 1`] = `
[
  {
    "available_from": null,
    "available_to": null,
    "currentVolunteers": [
      {
        "gender": "male",
        "mobile_phone": "19725534499",
        "name": "April Hermiston",
        "uuid": "8e54cf96-c3d5-30fa-a389-e9be7fb1d1ca",
      },
      {
        "gender": "male",
        "mobile_phone": "3205 869 181",
        "name": "Curtis Sipes",
        "uuid": "8711fb52-aca9-3df7-9133-0f3e830780a7",
      },
      {
        "gender": "female",
        "mobile_phone": "18455021521",
        "name": "Dr. Virginia Wintheiser I",
        "uuid": "0348bb3b-f57d-3908-8e01-a59b5a356c9f",
      },
      {
        "gender": "female",
        "mobile_phone": "14198281670",
        "name": "Jasper Renner DVM",
        "uuid": "96ea8b57-9c6f-32a2-aefb-0481f917a48c",
      },
    ],
    "days": [
      true,
      true,
      true,
      true,
      true,
      true,
      false,
    ],
    "endTime": 2025-09-15T05:00:00.000Z,
    "location": "Hansenstad",
    "locationId": 2,
    "shiftId": 9,
    "startTime": 2025-09-15T02:00:00.000Z,
  },
  {
    "available_from": null,
    "available_to": null,
    "currentVolunteers": [
      {
        "gender": "male",
        "mobile_phone": "12676954373",
        "name": "Admin",
        "uuid": "844f03ec-e29e-38e1-8df3-b56c47e69890",
      },
      {
        "gender": "male",
        "mobile_phone": "19725534499",
        "name": "April Hermiston",
        "uuid": "8e54cf96-c3d5-30fa-a389-e9be7fb1d1ca",
      },
      {
        "gender": "female",
        "mobile_phone": "19348732073",
        "name": "Dr. Gonzalo Ruecker",
        "uuid": "6a980e31-56ec-34b7-9eea-71a19c235179",
      },
      {
        "gender": "female",
        "mobile_phone": "6894 801 382",
        "name": "Walter Ryan",
        "uuid": "eb5be124-8496-3476-b4eb-57c3d1d5f8c8",
      },
    ],
    "days": [
      true,
      true,
      true,
      true,
      true,
      true,
      true,
    ],
    "endTime": 2025-09-15T08:00:00.000Z,
    "location": "Hansenstad",
    "locationId": 2,
    "shiftId": 10,
    "startTime": 2025-09-15T05:00:00.000Z,
  },
  {
    "available_from": null,
    "available_to": null,
    "currentVolunteers": [
      {
        "gender": "male",
        "mobile_phone": "6263 688 722",
        "name": "User",
        "uuid": "047ee497-c4b8-30d5-94cb-bbc0937eec5f",
      },
      {
        "gender": "male",
        "mobile_phone": "16067517979",
        "name": "Lysanne Hessel II",
        "uuid": "af86913d-e8d1-31a9-bfdb-373002ccdc65",
      },
      {
        "gender": "female",
        "mobile_phone": "14198281670",
        "name": "Jasper Renner DVM",
        "uuid": "96ea8b57-9c6f-32a2-aefb-0481f917a48c",
      },
      {
        "gender": "female",
        "mobile_phone": "9789 468 503",
        "name": "Catalina Schimmel",
        "uuid": "b7807be1-bc20-3fba-a52c-794ddca86f1d",
      },
    ],
    "days": [
      true,
      true,
      true,
      true,
      true,
      true,
      false,
    ],
    "endTime": 2025-09-15T02:00:00.000Z,
    "location": "East Kadenshire",
    "locationId": 5,
    "shiftId": 1,
    "startTime": 2025-09-14T23:00:00.000Z,
  },
  {
    "available_from": "2025-09-20",
    "available_to": null,
    "currentVolunteers": [
      {
        "gender": "male",
        "mobile_phone": "7816 805 767",
        "name": "Prof. Chad Schumm I",
        "uuid": "6973a7f0-c756-3b1d-9186-8bae659fba4b",
      },
      {
        "gender": "male",
        "mobile_phone": "9716 042 544",
        "name": "Alvena Prohaska",
        "uuid": "64f8e80e-108d-3f6d-8e7b-dc27bfda8844",
      },
      {
        "gender": "female",
        "mobile_phone": "18322640369",
        "name": "Mrs. Maybelle Streich",
        "uuid": "35b5509d-863f-32a4-969b-5cd171d6425b",
      },
      {
        "gender": "female",
        "mobile_phone": "15515676031",
        "name": "Curt Nikolaus",
        "uuid": "5d37ca2a-ba6b-36ae-ac42-0d2d6cca79eb",
      },
    ],
    "days": [
      false,
      true,
      true,
      true,
      true,
      true,
      true,
    ],
    "endTime": 2025-09-15T02:00:00.000Z,
    "location": "South Hesterhaven",
    "locationId": 1,
    "shiftId": 17,
    "startTime": 2025-09-14T23:00:00.000Z,
  },
  {
    "available_from": null,
    "available_to": null,
    "currentVolunteers": [
      {
        "gender": "female",
        "mobile_phone": "16282547085",
        "name": "Jerome Feil",
        "uuid": "480d4db1-e478-39c8-a1fe-5c34b0f6ca20",
      },
      {
        "gender": "female",
        "mobile_phone": "13473310423",
        "name": "Wife",
        "uuid": "b476fc3c-a7d8-3f5c-a0bb-8a0711760b74",
      },
      {
        "gender": "female",
        "mobile_phone": "13529555923",
        "name": "Miss Albertha Heidenreich III",
        "uuid": "b09bb61d-8fe8-3db0-832f-4882dc13edd2",
      },
      {
        "gender": "female",
        "mobile_phone": "14198281670",
        "name": "Jasper Renner DVM",
        "uuid": "96ea8b57-9c6f-32a2-aefb-0481f917a48c",
      },
    ],
    "days": [
      true,
      true,
      true,
      true,
      true,
      true,
      true,
    ],
    "endTime": 2025-09-15T05:00:00.000Z,
    "location": "South Hesterhaven",
    "locationId": 1,
    "shiftId": 18,
    "startTime": 2025-09-15T02:00:00.000Z,
  },
  {
    "available_from": null,
    "available_to": null,
    "currentVolunteers": [
      {
        "gender": "male",
        "mobile_phone": "13192518874",
        "name": "Daryl Kerluke",
        "uuid": "60e892df-2660-33c7-875b-59b7c6e09cee",
      },
      {
        "gender": "male",
        "mobile_phone": "9716 042 544",
        "name": "Alvena Prohaska",
        "uuid": "64f8e80e-108d-3f6d-8e7b-dc27bfda8844",
      },
      {
        "gender": "female",
        "mobile_phone": "17478489044",
        "name": "Darron Wunsch Sr.",
        "uuid": "9b897e69-4858-36e3-9704-3fc44ae91a3d",
      },
      {
        "gender": "female",
        "mobile_phone": "18322640369",
        "name": "Mrs. Maybelle Streich",
        "uuid": "35b5509d-863f-32a4-969b-5cd171d6425b",
      },
    ],
    "days": [
      true,
      true,
      true,
      true,
      true,
      true,
      true,
    ],
    "endTime": 2025-09-15T08:00:00.000Z,
    "location": "South Hesterhaven",
    "locationId": 1,
    "shiftId": 19,
    "startTime": 2025-09-15T05:00:00.000Z,
  },
]
`;

exports[`useLocationFilter > should have correct locations 1`] = `
[
  {
    "description": "Ullam officia impedit ut rerum ut ad commodi culpa. Et et qui doloremque non est. Porro enim animi quisquam vitae.",
    "filterShifts": [
      {
        "available_from": null,
        "available_to": null,
        "end_time": "15:00:00",
        "freeShifts": 1,
        "id": 9,
        "js_days": [
          true,
          true,
          true,
          true,
          true,
          true,
          false,
        ],
        "maxedFemales": false,
        "start_time": "12:00:00",
        "volunteers": [
          {
            "gender": "male",
            "mobile_phone": "19725534499",
            "name": "April Hermiston",
            "uuid": "8e54cf96-c3d5-30fa-a389-e9be7fb1d1ca",
          },
          {
            "gender": "male",
            "mobile_phone": "3205 869 181",
            "name": "Curtis Sipes",
            "uuid": "8711fb52-aca9-3df7-9133-0f3e830780a7",
          },
          {
            "gender": "female",
            "mobile_phone": "18455021521",
            "name": "Dr. Virginia Wintheiser I",
            "uuid": "0348bb3b-f57d-3908-8e01-a59b5a356c9f",
          },
          {
            "gender": "female",
            "mobile_phone": "14198281670",
            "name": "Jasper Renner DVM",
            "uuid": "96ea8b57-9c6f-32a2-aefb-0481f917a48c",
          },
          null,
        ],
      },
      {
        "available_from": null,
        "available_to": null,
        "end_time": "18:00:00",
        "freeShifts": 1,
        "id": 10,
        "js_days": [
          true,
          true,
          true,
          true,
          true,
          true,
          true,
        ],
        "maxedFemales": false,
        "start_time": "15:00:00",
        "volunteers": [
          {
            "gender": "male",
            "mobile_phone": "12676954373",
            "name": "Admin",
            "uuid": "844f03ec-e29e-38e1-8df3-b56c47e69890",
          },
          {
            "gender": "male",
            "mobile_phone": "19725534499",
            "name": "April Hermiston",
            "uuid": "8e54cf96-c3d5-30fa-a389-e9be7fb1d1ca",
          },
          {
            "gender": "female",
            "mobile_phone": "19348732073",
            "name": "Dr. Gonzalo Ruecker",
            "uuid": "6a980e31-56ec-34b7-9eea-71a19c235179",
          },
          {
            "gender": "female",
            "mobile_phone": "6894 801 382",
            "name": "Walter Ryan",
            "uuid": "eb5be124-8496-3476-b4eb-57c3d1d5f8c8",
          },
          null,
        ],
      },
    ],
    "freeShifts": 2,
    "id": 2,
    "max_volunteers": 5,
    "min_volunteers": 4,
    "name": "Hansenstad",
    "requires_brother": true,
  },
  {
    "description": "Ducimus rerum et explicabo non impedit dolor. Necessitatibus doloremque aut molestiae voluptatibus nulla et quia. Modi sunt aut id voluptas.",
    "filterShifts": [
      {
        "available_from": "2025-09-01",
        "available_to": "2025-09-30",
        "end_time": "12:00:00",
        "freeShifts": 0,
        "id": 5,
        "js_days": [
          true,
          true,
          true,
          true,
          true,
          true,
          true,
        ],
        "start_time": "09:00:00",
        "volunteers": [
          {
            "gender": "male",
            "mobile_phone": "16897614632",
            "name": "Breanne Gutkowski",
            "uuid": "3631fa66-0b48-32b5-8a32-f88ce5ba88ae",
          },
          {
            "gender": "male",
            "mobile_phone": "8025 199 139",
            "name": "Husband",
            "uuid": "697becc4-d57c-3adb-9f09-48acae27c299",
          },
          {
            "gender": "male",
            "mobile_phone": "2407 101 199",
            "name": "Jordy Runolfsdottir",
            "uuid": "3fade543-82c8-3572-8899-b17c161ba486",
          },
          {
            "gender": "male",
            "mobile_phone": "13528523947",
            "name": "Chad Glover",
            "uuid": "4f429730-000a-3f03-a4e0-98210c32c2b9",
          },
          {
            "gender": "female",
            "mobile_phone": "17812105370",
            "name": "Miss Karina Osinski",
            "uuid": "0696b77c-ece2-33b1-be90-967feac63aa8",
          },
        ],
      },
    ],
    "freeShifts": 0,
    "id": 4,
    "max_volunteers": 5,
    "min_volunteers": 1,
    "name": "East Murraybury",
    "requires_brother": false,
  },
  {
    "description": "<p><a target="_blank" rel="noopener noreferrer nofollow" href="#">Perferendis</a> quaerat et beatae laboriosam consequatur accusamus. Dolorem dolorem perspiciatis ducimus omnis accusantium accusamus corrupti velit. Est aut dolorem officia laboriosam vel.</p>",
    "filterShifts": [
      {
        "available_from": null,
        "available_to": null,
        "end_time": "12:00:00",
        "freeShifts": 1,
        "id": 1,
        "js_days": [
          true,
          true,
          true,
          true,
          true,
          true,
          false,
        ],
        "start_time": "09:00:00",
        "volunteers": [
          {
            "gender": "male",
            "mobile_phone": "6263 688 722",
            "name": "User",
            "uuid": "047ee497-c4b8-30d5-94cb-bbc0937eec5f",
          },
          {
            "gender": "male",
            "mobile_phone": "16067517979",
            "name": "Lysanne Hessel II",
            "uuid": "af86913d-e8d1-31a9-bfdb-373002ccdc65",
          },
          {
            "gender": "female",
            "mobile_phone": "14198281670",
            "name": "Jasper Renner DVM",
            "uuid": "96ea8b57-9c6f-32a2-aefb-0481f917a48c",
          },
          {
            "gender": "female",
            "mobile_phone": "9789 468 503",
            "name": "Catalina Schimmel",
            "uuid": "b7807be1-bc20-3fba-a52c-794ddca86f1d",
          },
          null,
        ],
      },
    ],
    "freeShifts": 1,
    "id": 5,
    "max_volunteers": 5,
    "min_volunteers": 4,
    "name": "East Kadenshire",
    "requires_brother": false,
  },
  {
    "description": "Dignissimos deserunt est corporis corporis. Tempora fugiat unde dolor. Sint in facere ratione illo error consequatur.",
    "filterShifts": [
      {
        "available_from": null,
        "available_to": null,
        "end_time": "12:00:00",
        "freeShifts": 0,
        "id": 14,
        "js_days": [
          true,
          true,
          true,
          true,
          true,
          true,
          false,
        ],
        "start_time": "09:00:00",
        "volunteers": [
          {
            "gender": "male",
            "mobile_phone": "6263 688 722",
            "name": "User",
            "uuid": "047ee497-c4b8-30d5-94cb-bbc0937eec5f",
          },
          {
            "gender": "male",
            "mobile_phone": "7816 805 767",
            "name": "Prof. Chad Schumm I",
            "uuid": "6973a7f0-c756-3b1d-9186-8bae659fba4b",
          },
          {
            "gender": "female",
            "mobile_phone": "5515 330 102",
            "name": "Efren Jacobs",
            "uuid": "e8a64580-6fdf-3b94-984e-61c3372a34bd",
          },
          {
            "gender": "female",
            "mobile_phone": "14198281670",
            "name": "Jasper Renner DVM",
            "uuid": "96ea8b57-9c6f-32a2-aefb-0481f917a48c",
          },
          {
            "gender": "female",
            "mobile_phone": "12724560225",
            "name": "Enrique Mertz",
            "uuid": "b9078e37-ef90-302c-904e-48bb230f7138",
          },
        ],
      },
    ],
    "freeShifts": 0,
    "id": 6,
    "max_volunteers": 5,
    "min_volunteers": 5,
    "name": "Port Carolineton",
    "requires_brother": false,
  },
  {
    "description": "Non cumque est ducimus aut in eos sit. Aperiam quis eum quibusdam sit voluptas totam ipsum. Quia voluptatum quo aut tempore nisi.",
    "filterShifts": [
      {
        "available_from": null,
        "available_to": null,
        "end_time": "15:00:00",
        "freeShifts": 1,
        "id": 18,
        "js_days": [
          true,
          true,
          true,
          true,
          true,
          true,
          true,
        ],
        "start_time": "12:00:00",
        "volunteers": [
          {
            "gender": "female",
            "mobile_phone": "16282547085",
            "name": "Jerome Feil",
            "uuid": "480d4db1-e478-39c8-a1fe-5c34b0f6ca20",
          },
          {
            "gender": "female",
            "mobile_phone": "13473310423",
            "name": "Wife",
            "uuid": "b476fc3c-a7d8-3f5c-a0bb-8a0711760b74",
          },
          {
            "gender": "female",
            "mobile_phone": "13529555923",
            "name": "Miss Albertha Heidenreich III",
            "uuid": "b09bb61d-8fe8-3db0-832f-4882dc13edd2",
          },
          {
            "gender": "female",
            "mobile_phone": "14198281670",
            "name": "Jasper Renner DVM",
            "uuid": "96ea8b57-9c6f-32a2-aefb-0481f917a48c",
          },
          null,
        ],
      },
      {
        "available_from": null,
        "available_to": null,
        "end_time": "18:00:00",
        "freeShifts": 1,
        "id": 19,
        "js_days": [
          true,
          true,
          true,
          true,
          true,
          true,
          true,
        ],
        "start_time": "15:00:00",
        "volunteers": [
          {
            "gender": "male",
            "mobile_phone": "13192518874",
            "name": "Daryl Kerluke",
            "uuid": "60e892df-2660-33c7-875b-59b7c6e09cee",
          },
          {
            "gender": "male",
            "mobile_phone": "9716 042 544",
            "name": "Alvena Prohaska",
            "uuid": "64f8e80e-108d-3f6d-8e7b-dc27bfda8844",
          },
          {
            "gender": "female",
            "mobile_phone": "17478489044",
            "name": "Darron Wunsch Sr.",
            "uuid": "9b897e69-4858-36e3-9704-3fc44ae91a3d",
          },
          {
            "gender": "female",
            "mobile_phone": "18322640369",
            "name": "Mrs. Maybelle Streich",
            "uuid": "35b5509d-863f-32a4-969b-5cd171d6425b",
          },
          null,
        ],
      },
    ],
    "freeShifts": 3,
    "id": 1,
    "max_volunteers": 5,
    "min_volunteers": 1,
    "name": "South Hesterhaven",
    "requires_brother": false,
  },
]
`;
